--- a/sections/GegenkopplungStabilitaet.tex
+++ b/sections/GegenkopplungStabilitaet.tex
@@ -220,7 +220,9 @@
 		\subsubsection{Stabilitätssatz für ein System 2. Ordnung \formelbuch{137}}
 			Ein System ist genau dann stabil, wenn {\bf alle} Koeffizienten der
 			homogenen Dgl. positiv (oder alle negativ) und ungleich 0 sind.\\
-			$\ddot{y}+a_1\dot{y}+a_0y=F(u)$
+			$\ddot{y}+a_1\dot{y}+a_0y=F(u)$ \\
+			Für $a_0 = 0$ und $a_1 > 0$ enthält der Prozess ein reines I-Glied und
+			ist somit ein Prozess ohne Ausgleich. (DC-Verstärkung = $\infty$)
 			
 		\subsubsection{Stabilitätssatz für die Sprungantwort}
 			Ein LTI-System ist genau dann stabil, wenn die Sprungantwort einem
