--- a/RegT2.tex
+++ b/RegT2.tex
@@ -15,10 +15,10 @@
 
 \usepackage{pdflscape}
 \usepackage{tabularx}
+\usepackage{ltablex}
 \usepackage{booktabs}
 \usepackage{multicol}
 \usepackage{enumitem}
-
 \usepackage{longtable}
 
 \newcommand\formelbuch[1]{\texttt{\textcolor{red!60!black}{\small S#1}}}
